--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,25 @@
     <title>Todo-List</title>
 </head>
 <body>
-    <h1>Hello</h1>
+    <main>
+        <header>
+            <h1>Today's To Do</h1>
+            <img id="refreshImg" src="" alt="refresh-icon">
+        </header>
+        <section id="add-to-list">
+            <div class="form-container">
+                <form action="" id="form">
+                    <input type="text" placeholder="Add to your list...">
+                    <button type="submit"><img id="enterImg" src="" alt="enter-icon"></button>
+                </form>
+            </div>
+            <div class="list-wrapper">
+                <ul id="list"></ul>
+            </div>
+        </section>
+        <section id="clear-completed">
+            <p>Clear all completed</p>
+        </section>
+    </main>
 </body>
 </html>
